--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
 
     <com.kdp.seekbar.view.VerticalSeekbar
+        android:id="@+id/seekbar"
         android:layout_width="25dp"
         android:layout_height="300dp"
         app:progressColor="#2f9de3"
@@ -22,5 +23,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </android.support.constraint.ConstraintLayout>
