--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
         android:id="@+id/seekbar"
         android:layout_width="25dp"
         android:layout_height="300dp"
-        app:progressColor="#2f9de3"
-        android:progress="10"
+        app:progressColor="#ff0000"
+        android:progress="0"
         android:max="100"
         app:thumbShadowRadius="2dp"
         app:thumbStrokeColor="#fff"
         app:thumbStrokeWidth="3dp"
+        app:thumbColor="#ff0000"
         app:thumbShadowColor="#4d000000"
         app:bgRadius="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
